# material-reconstruction-lowlevel

./: CMakeLists.txt  LICENSE  README.md  annealing-lowlevel.c  fft.c  shader-source.h.in
.github/workflows/: build.yml
Modules/: CompileShader.cmake  FindFFTW3.cmake
shaders/: CMakeLists.txt  metric.comp  reduce.comp  update-s2.comp
src/: CMakeLists.txt  annealing-lowlevel.c  annealing-lowlevel.h  buffer.c  context.c  corrfn.c  images.c  internal.h  metric.c  shader-source.h.in
